objects/CD_Proxy_Account_Campaign_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for the Consumer Deposits Proxy Account Campaign Creation functionality</description>
    <fields>
        <fullName>Campaign_Owner_Id__c</fullName>
        <description>Default owner id for campaigns created</description>
        <inlineHelpText>Enter the User Id of the default campaign owner. If left blank, the user triggering the process will become the owner.</inlineHelpText>
        <label>Campaign Owner Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Record_Type_Id__c</fullName>
        <description>The campaign record type for records created with this process</description>
        <inlineHelpText>Enter the record type id to be used for Campaigns created with this process.</inlineHelpText>
        <label>Campaign Record Type Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id_List__c</fullName>
        <description>Comma-delimited list of report ids to be used as the source for campaign creation</description>
        <inlineHelpText>Enter the report id(s) to be used to generate the campaigns/campaign members. Separate each report id with a comma.</inlineHelpText>
        <label>Report Id List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CD - Proxy Account Campaign Config</label>
</CustomObject>